# connect-four-test-ai

./: README.md  main.py  pelilauta.py  pyproject.toml  toiminnot.py
tekoaly/: minimax.py  pisteytys.py
